@@ -1,200 +1,160 @@
 package com.burakkutbay.studentapi.service;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertAll;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.LinkedHashMap;
-import java.util.List;
+import java.time.Clock;
+import java.time.LocalDate;
+import java.time.ZoneOffset;
+import java.util.HashMap;
 import java.util.Map;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import com.burakkutbay.studentapi.model.Enrollment;
-import com.burakkutbay.studentapi.model.Student;
+import com.burakkutbay.studentapi.model.LetterGrade;
 import com.burakkutbay.studentapi.model.StudentStatus;
 import com.burakkutbay.studentapi.notification.NotificationService;
 import com.burakkutbay.studentapi.repository.InMemoryStudentRepository;
-import com.burakkutbay.studentapi.util.IdGenerator;
+import com.burakkutbay.studentapi.service.ApiException.Conflict;
+import com.burakkutbay.studentapi.service.ApiException.NotFound;
+import com.burakkutbay.studentapi.service.ApiException.Validation;
 
-public class StudentServiceTest {
+class StudentServiceTest {
+
+    private static final Clock FIXED = Clock.fixed(
+            LocalDate.of(2026, 9, 17).atStartOfDay().toInstant(ZoneOffset.UTC), ZoneOffset.UTC);
 
     private StudentService service;
 
-    @Before
-    public void setUp() {
-        IdGenerator.getInstance().reset();
-        service = new StudentService(new InMemoryStudentRepository(), new GpaCalculator(), new NotificationService());
+    @BeforeEach
+    void setUp() {
+        service = new StudentService(new InMemoryStudentRepository(), new GpaCalculator(), new NotificationService(), FIXED);
     }
 
-    private Map validBody(String email) {
-        Map body = new LinkedHashMap();
-        body.put("firstName", "  ismail ");
-        body.put("lastName", "YILDIZ");
-        body.put("email", email);
-        body.put("birthDate", "2003-05-20");
-        body.put("department", "Bilgisayar Mühendisliği");
+    private static Map<String, Object> validBody(String email) {
+        var body = new HashMap<String, Object>(Map.of(
+                "firstName", "  ismail ",
+                "lastName", "YILDIZ",
+                "email", email,
+                "birthDate", "2003-05-20",
+                "department", "Bilgisayar Mühendisliği"));
         return body;
     }
 
-    private Map map(String key, Object value) {
-        Map map = new LinkedHashMap();
-        map.put(key, value);
-        return map;
+    private static Map<String, Object> enrollment(String courseCode, String semester) {
+        return Map.of("courseCode", courseCode, "semester", semester);
     }
 
     @Test
-    public void createsStudentWithNormalizedFields() {
-        Student student = service.createStudent(validBody("Ismail.Yildiz@Ogrenci.edu.tr"));
-        assertEquals(new Long(1), student.getId());
-        assertEquals("İsmail", student.getFirstName());
-        assertEquals("Yıldız", student.getLastName());
-        assertEquals("ismail.yildiz@ogrenci.edu.tr", student.getEmail());
-        assertEquals(StudentStatus.ACTIVE, student.getStatus());
-        assertTrue(student.getStudentNumber().endsWith("00001"));
+    void createsStudentWithNormalizedFields() {
+        var student = service.createStudent(validBody("Ismail.Yildiz@Ogrenci.edu.tr"));
+        assertAll(
+                () -> assertEquals(1L, student.id()),
+                () -> assertEquals("İsmail", student.firstName()),
+                () -> assertEquals("Yıldız", student.lastName()),
+                () -> assertEquals("ismail.yildiz@ogrenci.edu.tr", student.email()),
+                () -> assertEquals(StudentStatus.ACTIVE, student.status()),
+                () -> assertEquals("202600001", student.studentNumber()));
     }
 
     @Test
-    public void collectsAllValidationErrors() {
-        Map body = new LinkedHashMap();
-        body.put("email", "gecersiz");
-        body.put("birthDate", "2003-02-30");
-        body.put("status", "UZAYDA");
-        try {
-            service.createStudent(body);
-            fail("ValidationException bekleniyordu");
-        } catch (ValidationException e) {
-            List errors = e.getErrors();
-            assertEquals(6, errors.size());
-            assertTrue(errors.contains("firstName zorunludur"));
-            assertTrue(errors.contains("email geçersiz"));
-            assertTrue(errors.contains("birthDate yyyy-MM-dd formatında olmalıdır"));
-            assertTrue(errors.contains("status geçersiz"));
-        }
+    void collectsAllValidationErrors() {
+        var body = Map.<String, Object>of("email", "gecersiz", "birthDate", "2003-02-30", "status", "UZAYDA");
+        var errors = assertThrows(Validation.class, () -> service.createStudent(body)).errors();
+        assertEquals(6, errors.size());
+        assertTrue(errors.containsAll(java.util.List.of(
+                "firstName zorunludur", "email geçersiz", "birthDate yyyy-MM-dd formatında olmalıdır", "status geçersiz")));
     }
 
-    @Test(expected = ValidationException.class)
-    public void rejectsDuplicateEmail() {
+    @Test
+    void rejectsDuplicateEmail() {
         service.createStudent(validBody("a@b.com"));
-        service.createStudent(validBody("A@B.com"));
+        assertThrows(Validation.class, () -> service.createStudent(validBody("A@B.com")));
     }
 
     @Test
-    public void enrollmentRulesAreEnforced() {
-        Student student = service.createStudent(validBody("a@b.com"));
-        Long id = student.getId();
+    void enrollmentRulesAreEnforced() {
+        long id = service.createStudent(validBody("a@b.com")).id();
 
-        Map enroll = new LinkedHashMap();
-        enroll.put("courseCode", "ceng101");
-        enroll.put("semester", "2025-GUZ");
-        Enrollment enrollment = service.enroll(id, enroll);
-        assertEquals("CENG101", enrollment.getCourseCode());
-        assertNull(enrollment.getLetterGrade());
+        var enrolled = service.enroll(id, enrollment("ceng101", "2025-GUZ"));
+        assertEquals("CENG101", enrolled.courseCode());
+        assertNull(enrolled.letterGrade());
 
-        try {
-            service.enroll(id, enroll);
-            fail("Aynı derse ikinci kayıt engellenmeli");
-        } catch (ConflictException expected) {
-            assertTrue(expected.getMessage().contains("zaten kayıtlı"));
-        }
+        var duplicate = assertThrows(Conflict.class, () -> service.enroll(id, enrollment("ceng101", "2025-GUZ")));
+        assertTrue(duplicate.getMessage().contains("zaten kayıtlı"));
 
         // 4 + 5 + 4 + 3 + 3 = 19, sonraki 4 kredilik ders limiti aşar
-        String[] courses = new String[] {"MATH101", "PHYS101", "MATH201", "CENG305"};
-        for (int i = 0; i < courses.length; i++) {
-            Map body = new LinkedHashMap();
-            body.put("courseCode", courses[i]);
-            body.put("semester", "2025-GUZ");
-            service.enroll(id, body);
+        for (var course : new String[] {"MATH101", "PHYS101", "MATH201", "CENG305"}) {
+            service.enroll(id, enrollment(course, "2025-GUZ"));
         }
-        Map tooMuch = new LinkedHashMap();
-        tooMuch.put("courseCode", "CENG202");
-        tooMuch.put("semester", "2025-GUZ");
-        try {
-            service.enroll(id, tooMuch);
-            fail("Kredi limiti aşılmamalı");
-        } catch (ConflictException expected) {
-            assertEquals("Dönem kredi limiti aşıldı: 23 > 20", expected.getMessage());
-        }
+        var tooMuch = assertThrows(Conflict.class, () -> service.enroll(id, enrollment("CENG202", "2025-GUZ")));
+        assertEquals("Dönem kredi limiti aşıldı: 23 > 20", tooMuch.getMessage());
     }
 
     @Test
-    public void gradingUpdatesGpaAndBlocksDelete() {
-        Long id = service.createStudent(validBody("a@b.com")).getId();
-        Map enroll = new LinkedHashMap();
-        enroll.put("courseCode", "CENG101");
-        enroll.put("semester", "2025-GUZ");
-        service.enroll(id, enroll);
+    void gradingUpdatesGpaAndBlocksDelete() {
+        long id = service.createStudent(validBody("a@b.com")).id();
+        service.enroll(id, enrollment("CENG101", "2025-GUZ"));
 
-        Enrollment graded = service.gradeEnrollment(id, "ceng101", map("letterGrade", "ba"));
-        assertEquals("BA", graded.getLetterGrade());
+        var graded = service.gradeEnrollment(id, "ceng101", Map.of("letterGrade", "ba"));
+        assertEquals(LetterGrade.BA, graded.letterGrade());
 
-        Map summary = service.gpaSummary(id);
-        assertEquals(new Double(3.5), summary.get("gpa"));
+        var summary = service.gpaSummary(id);
+        assertEquals(3.5, summary.get("gpa"));
         assertEquals("Yüksek Onur", summary.get("honor"));
-        assertEquals(new Integer(4), summary.get("completedCredits"));
+        assertEquals(4, summary.get("completedCredits"));
 
-        try {
-            service.deleteStudent(id);
-            fail("Notlu öğrenci silinmemeli");
-        } catch (ConflictException expected) {
-            // beklenen
-        }
+        assertThrows(Conflict.class, () -> service.deleteStudent(id));
     }
 
     @Test
-    public void graduationRequiresGpa() {
-        Long id = service.createStudent(validBody("a@b.com")).getId();
-        try {
-            service.updateStudent(id, map("status", "GRADUATED"));
-            fail("GNO olmadan mezuniyet olmamalı");
-        } catch (ConflictException expected) {
-            assertEquals("Mezuniyet için GNO en az 2.00 olmalıdır", expected.getMessage());
-        }
+    void graduationRequiresGpa() {
+        long id = service.createStudent(validBody("a@b.com")).id();
+        var conflict = assertThrows(Conflict.class, () -> service.updateStudent(id, Map.of("status", "GRADUATED")));
+        assertEquals("Mezuniyet için GNO en az 2.00 olmalıdır", conflict.getMessage());
     }
 
     @Test
-    public void listsWithFilterAndSort() {
+    void failedUpdateDoesNotLeavePartialChanges() {
+        long id = service.createStudent(validBody("a@b.com")).id();
+        assertThrows(Conflict.class,
+                () -> service.updateStudent(id, Map.of("lastName", "değişti", "status", "GRADUATED")));
+        assertEquals("Yıldız", service.getStudent(id).lastName());
+    }
+
+    @Test
+    void listsWithFilterAndSort() {
         service.createStudent(validBody("a@b.com"));
-        Map second = validBody("c@d.com");
+        var second = validBody("c@d.com");
         second.put("firstName", "Çağla");
         second.put("lastName", "Acar");
         second.put("department", "Matematik");
         service.createStudent(second);
 
-        List byName = service.listStudents(null, null, "name");
-        assertEquals("Acar", ((Student) byName.get(0)).getLastName());
-
-        List math = service.listStudents("matematik", "active", null);
-        assertEquals(1, math.size());
-
-        try {
-            service.listStudents(null, null, "boy");
-            fail("Geçersiz sıralama reddedilmeli");
-        } catch (ValidationException expected) {
-            // beklenen
-        }
+        assertEquals("Acar", service.listStudents(null, null, "name").getFirst().lastName());
+        assertEquals(1, service.listStudents("matematik", "active", null).size());
+        assertThrows(Validation.class, () -> service.listStudents(null, null, "boy"));
     }
 
     @Test
-    public void statisticsAggregateAcrossStudents() {
-        Long id = service.createStudent(validBody("a@b.com")).getId();
-        Map enroll = new LinkedHashMap();
-        enroll.put("courseCode", "MATH101");
-        enroll.put("semester", "2025-GUZ");
-        service.enroll(id, enroll);
-        service.gradeEnrollment(id, "MATH101", map("letterGrade", "CC"));
+    void statisticsAggregateAcrossStudents() {
+        long id = service.createStudent(validBody("a@b.com")).id();
+        service.enroll(id, enrollment("MATH101", "2025-GUZ"));
+        service.gradeEnrollment(id, "MATH101", Map.of("letterGrade", "CC"));
 
-        Map stats = service.statistics();
-        assertEquals(new Integer(1), stats.get("totalStudents"));
-        assertEquals(new Double(2.0), stats.get("averageGpa"));
-        assertEquals(new Integer(1), ((Map) stats.get("gradeDistribution")).get("CC"));
-        assertEquals(new Integer(1), ((Map) stats.get("courseEnrollments")).get("MATH101"));
+        var stats = service.statistics();
+        assertEquals(1, stats.get("totalStudents"));
+        assertEquals(2.0, stats.get("averageGpa"));
+        assertEquals(1, ((Map<?, ?>) stats.get("gradeDistribution")).get(LetterGrade.CC));
+        assertEquals(1, ((Map<?, ?>) stats.get("courseEnrollments")).get("MATH101"));
     }
 
-    @Test(expected = NotFoundException.class)
-    public void missingStudentIsReported() {
-        service.getStudent(new Long(42));
+    @Test
+    void missingStudentIsReported() {
+        assertThrows(NotFound.class, () -> service.getStudent(42));
     }
 }
